# llm-crawler-benchmarks

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  benchmark_all_tools.py  benchmark_answer_quality.py  benchmark_markcrawl.py  benchmark_pipeline.py  benchmark_quality.py  benchmark_retrieval.py  generate_readme.py  lint_reports.py  preflight.py  pyproject.toml  quality_scorer.py  report_utils.py  run_benchmarks.sh  test_crawl4ai_graduated.py
.github/workflows/: ci.yml  sync-readme.yml
reports/: ANSWER_QUALITY.md  COST_AT_SCALE.md  MARKCRAWL_RESULTS.md  METHODOLOGY.md  PIPELINE_TIMING.md  QUALITY_COMPARISON.md  REPRODUCIBILITY.md  RETRIEVAL_COMPARISON.md  RETRIEVAL_COMPARISON_CONTEXT.md  RETRIEVAL_FASTAPI_200.md  SPEED_COMPARISON.md
runners/: README.md  __init__.py  colly_runner.py  crawl4ai_raw_runner.py  crawl4ai_runner.py  crawlee_runner.py  firecrawl_runner.py  markcrawl_runner.py  playwright_runner.py  scrapy_runner.py
scripts/: ci_local.sh  install_pre_push_hook.sh
self_improvement/: 02_benchmark_code_review.md  03_docker_infra_review.md  04_report_style_compliance.md  05_cross_report_consistency.md  06_resilience_restart.md  07_report_data_quality.md  09_safeguards.md  MASTER.md  check_cross_report_consistency.py  check_invariants.py  check_no_site_hardcoding.py  feedback_registry.md  sync_markcrawl.py  sync_readme.py
sites/: __init__.py  pool.py  pool_v1.yaml  test_pool.py
tests/: test_quality_scorer.py
tools/colly_crawler/: main.go
tools/firecrawl/: setup.sh
